Fix #4721: increase description contrast

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap-override.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap-override.less
@@ -39,6 +39,11 @@ body.orbeon {
     .alert {
         margin-bottom: @baseLineHeight / 2;
         border-radius: 0;
+
+        // Increase contract for accessibility
+        color            : @gray;
+        background-color : @white;
+        border           : 1px solid #e3e3e3;
     }
 
     .row-fluid [class*="span"] {
